force-app/main/default/objects/Completion__c/Completion__c.object-meta.xml
<CustomObject>
    <description>Tracks mechanical, E&amp;I, pre-commissioning, trial, and commissioning completion milestones per system, covering stages 7.1â€“7.8.</description>
    <label>Completion</label>
    <nameField>
        <displayFormat>CMP-{00000}</displayFormat>
        <label>Completion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>