force-app/main/default/objects/Completion__c/fields/Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date__c</fullName>
    <label>Actual Date</label>
    <type>Date</type>
</CustomField>