force-app/main/default/objects/Completion__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result / Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>