force-app/main/default/objects/Completion__c/fields/Signed_Off_By__c.field-meta.xml
<CustomField>
    <fullName>Signed_Off_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed Off By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Completions</relationshipLabel>
    <relationshipName>Completions_Signed</relationshipName>
    <type>Lookup</type>
</CustomField>