force-app/main/default/objects/Completion__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical Completion</fullName>
                <default>true</default>
                <label>Mechanical Completion</label>
            </value>
            <value>
                <fullName>E&amp;I Completion</fullName>
            </value>
            <value>
                <fullName>Pre-Commissioning</fullName>
            </value>
            <value>
                <fullName>No-Load Trial</fullName>
            </value>
            <value>
                <fullName>Load Trial</fullName>
            </value>
            <value>
                <fullName>Cold Commissioning</fullName>
            </value>
            <value>
                <fullName>Hot Commissioning</fullName>
            </value>
            <value>
                <fullName>Performance Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>