force-app/main/default/objects/Completion__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>